--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,19 +38,19 @@
 
     <TextView
         android:id="@+id/currentValueView"
-        android:layout_width="367dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="52dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:text="$00000.00"
+        android:text="$00000.0000"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/refreshRequestButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/refreshRequestButton"
         android:layout_width="0dp"
         android:layout_height="94dp"
         android:layout_marginStart="120dp"
