--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="136dp"
+        android:layout_height="270dp"
         android:layout_marginBottom="76dp"
-        android:text="₿"
+        android:text="@string/bitcoinLogo"
         android:textSize="200sp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,25 +24,25 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="341dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="13dp"
-        android:text="Current Bitcoin Price"
+        android:text="@string/current_bitcoin_price"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/refreshRequestButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/currentValueView"
         android:layout_width="wrap_content"
-        android:layout_height="52dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:text="$00000.0000"
+        android:text="@string/_00000_0000"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/refreshRequestButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,19 +51,19 @@
 
     <Button
         android:id="@+id/refreshRequestButton"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="94dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="111dp"
         android:layout_marginBottom="96dp"
-        android:text="Refresh"
+        android:text="@string/refreshButton"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/currentValueView"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
